add another checking for file does not exist

--- a/WpfApp/App.config
+++ b/WpfApp/App.config
@@ -6,7 +6,7 @@
     <add key="xmlFile" value="Content/content.xml" />
     <add key="xmlURL" value="http://rudylee-889.apse2.actionbox.io:3000/videos.xml" />
     <add key="videoFolder" value="C:\Users\NICO\Desktop\" />
-    <add key="remoteVideoURL" value="http://localhost/videosrepo/" />
+    <add key="remoteVideoURL" value="http://localhost/videorepo/" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
